WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267282
[WebGPU] api,validation,shader_module,* is failing
https://bugs.webkit.org/show_bug.cgi?id=267282
Summary
[WebGPU] api,validation,shader_module,* is failing
Mike Wyrzykowski
Reported
2024-01-09 10:46:15 PST
[WebGPU] api,validation,shader_module,* is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-09 10:47:43 PST
<
rdar://problem/120726178
>
Mike Wyrzykowski
Comment 2
2024-01-09 17:13:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22559
EWS
Comment 3
2024-01-10 13:41:50 PST
Committed
272865@main
(119ba1f66dba): <
https://commits.webkit.org/272865@main
> Reviewed commits have been landed. Closing PR #22559 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug