[WebGPU] api,validation,shader_module,* is failing https://bugs.webkit.org/show_bug.cgi?id=267282 <radar://120726178>

Reviewed by Tadeu Zagallo.

Correct shader module validation and add passing expectations.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/shader_module/entry_point-expected.txt:
* Source/WebCore/Modules/WebGPU/GPUProgrammableStage.h:
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUDeviceImpl.cpp:
(WebCore::WebGPU::invalidEntryPointName):
(WebCore::WebGPU::convertToBacking):
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUProgrammableStage.h:
* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::Device::createComputePipeline):
* Source/WebGPU/WebGPU/Pipeline.mm:
(WebGPU::createLibrary):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):
* Source/WebGPU/WebGPU/ShaderModule.h:
(WebGPU::ShaderModule::create):
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::earlyCompileShaderModule):
(WebGPU::handleShaderSuccessOrFailure):
(WebGPU::Device::createShaderModule):
(WebGPU::ShaderModule::ShaderModule):
(WebGPU::ShaderModule::fragmentInputsForEntryPoint const):
(WebGPU::ShaderModule::fragmentReturnTypeForEntryPoint const):
(WebGPU::ShaderModule::vertexReturnTypeForEntryPoint const):
(WebGPU::ShaderModule::stageInTypesForEntryPoint const):
(WebGPU::ShaderModule::entryPointInformation const):
(WebGPU::ShaderModule::transformedEntryPoint const):
* Source/WebKit/Shared/WebGPU/WebGPUProgrammableStage.h:
* Source/WebKit/Shared/WebGPU/WebGPUProgrammableStage.serialization.in:

Canonical link: https://commits.webkit.org/272865@main