Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUProgrammableStage.h
@@ -37,7 +37,7 @@ using PipelineConstantValue = double; // May represent WGSL’s bool, f32, i32, 
 
 struct ProgrammableStage {
     ShaderModule& module;
-    String entryPoint;
+    std::optional<String> entryPoint;
     Vector<KeyValuePair<String, PipelineConstantValue>> constants;
 };
 
