Source/WebGPU/WebGPU/ShaderModule.mm
@@ -110,7 +110,7 @@ static RefPtr<ShaderModule> earlyCompileShaderModule(Device& device, std::varian
     auto library = ShaderModule::createLibrary(device.device(), prepareResult.msl, WTFMove(label));
     if (!library)
         return nullptr;
-    return ShaderModule::create(WTFMove(checkResult), WTFMove(hints), WTFMove(prepareResult.entryPoints), library, nil, device);
+    return ShaderModule::create(WTFMove(checkResult), WTFMove(hints), WTFMove(prepareResult.entryPoints), library, nil, { }, device);
 }
 
 static const HashSet<String> buildFeatureSet(const Vector<WGPUFeatureName>& features)
@@ -162,7 +162,7 @@ static const HashSet<String> buildFeatureSet(const Vector<WGPUFeatureName>& feat
     return result;
 }
 
-static Ref<ShaderModule> handleShaderSuccessOrFailure(WebGPU::Device &object, std::variant<WGSL::SuccessfulCheck, WGSL::FailedCheck> &checkResult, const WGPUShaderModuleDescriptor &descriptor, std::optional<ShaderModuleParameters> &shaderModuleParameters, NSMutableSet<NSString *> * originalOverrideNames = nil)
+static Ref<ShaderModule> handleShaderSuccessOrFailure(WebGPU::Device &object, std::variant<WGSL::SuccessfulCheck, WGSL::FailedCheck> &checkResult, const WGPUShaderModuleDescriptor &descriptor, std::optional<ShaderModuleParameters> &shaderModuleParameters, NSMutableSet<NSString *> * originalOverrideNames, HashMap<String, String>&& originalFunctionNames)
 {
     if (std::holds_alternative<WGSL::SuccessfulCheck>(checkResult)) {
         if (shaderModuleParameters->hints && descriptor.hintCount) {
@@ -170,7 +170,8 @@ static Ref<ShaderModule> handleShaderSuccessOrFailure(WebGPU::Device &object, st
             // https://bugs.webkit.org/show_bug.cgi?id=254258
             UNUSED_PARAM(earlyCompileShaderModule);
         }
-        return ShaderModule::create(WTFMove(checkResult), { }, { }, nil, originalOverrideNames, object);
+        dataLogLn(fromAPI(shaderModuleParameters->wgsl.code));
+        return ShaderModule::create(WTFMove(checkResult), { }, { }, nil, originalOverrideNames, WTFMove(originalFunctionNames), object);
     }
 
     auto& failedCheck = std::get<WGSL::FailedCheck>(checkResult);
@@ -194,6 +195,7 @@ Ref<ShaderModule> Device::createShaderModule(const WGPUShaderModuleDescriptor& d
     if (!shaderModuleParameters)
         return ShaderModule::createInvalid(*this);
 
+    HashMap<String, String> functionNames;
     auto supportedFeatures = buildFeatureSet(m_capabilities.features);
     auto checkResult = WGSL::staticCheck(fromAPI(shaderModuleParameters->wgsl.code), std::nullopt, WGSL::Configuration {
         .maxBuffersPlusVertexBuffersForVertexStage = maxBuffersPlusVertexBuffersForVertexStage(),
@@ -205,8 +207,8 @@ Ref<ShaderModule> Device::createShaderModule(const WGPUShaderModuleDescriptor& d
     // FIXME: Remove when https://bugs.webkit.org/show_bug.cgi?id=266774 is completed
     if (!std::holds_alternative<WGSL::SuccessfulCheck>(checkResult)) {
         NSString *nsWgsl = [NSString stringWithUTF8String:shaderModuleParameters->wgsl.code];
-        NSRange currentRange = NSMakeRange(0, nsWgsl.length);
         NSMutableSet<NSString *> *overrideNames = [NSMutableSet set];
+        NSRange currentRange = NSMakeRange(0, nsWgsl.length);
         for (;;) {
             NSRange newRange = [nsWgsl rangeOfString:@"override " options:NSLiteralSearch range:currentRange];
             if (newRange.location == NSNotFound)
@@ -218,15 +220,37 @@ Ref<ShaderModule> Device::createShaderModule(const WGPUShaderModuleDescriptor& d
             currentRange = NSMakeRange(endRange.location + 1, nsWgsl.length - endRange.location - 1);
         }
 
+        NSString* stageNames[] = { @"@vertex ", @"@fragment ", @"@compute " };
+        for (NSString* moduleName : stageNames) {
+            currentRange = NSMakeRange(0, nsWgsl.length);
+            for (;;) {
+                NSRange newRange = [nsWgsl rangeOfString:moduleName options:NSLiteralSearch range:currentRange];
+                if (newRange.location == NSNotFound)
+                    break;
+
+                newRange = [nsWgsl rangeOfString:@" fn " options:NSLiteralSearch range:NSMakeRange(newRange.location, nsWgsl.length - newRange.location - 1)];
+                if (newRange.location == NSNotFound)
+                    break;
+
+                NSRange endRange = [nsWgsl rangeOfString:@"(" options:NSLiteralSearch range:NSMakeRange(newRange.location, nsWgsl.length - newRange.location)];
+                auto startIndex = newRange.location + newRange.length;
+                NSString* functionName = [nsWgsl substringWithRange:NSMakeRange(startIndex, endRange.location - startIndex)];
+                currentRange = NSMakeRange(endRange.location + 1, nsWgsl.length - endRange.location - 1);
+                NSString *transformedName = [functionName stringByApplyingTransform:NSStringTransformToLatin reverse:NO];
+                transformedName = [transformedName stringByFoldingWithOptions:NSDiacriticInsensitiveSearch locale:NSLocale.currentLocale];
+                functionNames.set(functionName, transformedName);
+            }
+        }
+
         nsWgsl = [nsWgsl stringByApplyingTransform:NSStringTransformToLatin reverse:NO];
         nsWgsl = [nsWgsl stringByFoldingWithOptions:NSDiacriticInsensitiveSearch locale:NSLocale.currentLocale];
         auto checkResult = WGSL::staticCheck(nsWgsl, std::nullopt, { maxBuffersPlusVertexBuffersForVertexStage(), maxBuffersForFragmentStage(), maxBuffersForComputeStage() });
         dataLogLn(fromAPI(shaderModuleParameters->wgsl.code));
         dataLogLn(String(nsWgsl));
-        return handleShaderSuccessOrFailure(*this, checkResult, descriptor, shaderModuleParameters, overrideNames);
+        return handleShaderSuccessOrFailure(*this, checkResult, descriptor, shaderModuleParameters, overrideNames, WTFMove(functionNames));
     }
 
-    return handleShaderSuccessOrFailure(*this, checkResult, descriptor, shaderModuleParameters);
+    return handleShaderSuccessOrFailure(*this, checkResult, descriptor, shaderModuleParameters, nil, WTFMove(functionNames));
 }
 
 auto ShaderModule::convertCheckResult(std::variant<WGSL::SuccessfulCheck, WGSL::FailedCheck>&& checkResult) -> CheckResult
@@ -510,13 +534,14 @@ static ShaderModule::FragmentInputs parseFragmentInputs(const WGSL::AST::Functio
     return result;
 }
 
-ShaderModule::ShaderModule(std::variant<WGSL::SuccessfulCheck, WGSL::FailedCheck>&& checkResult, HashMap<String, Ref<PipelineLayout>>&& pipelineLayoutHints, HashMap<String, WGSL::Reflection::EntryPointInformation>&& entryPointInformation, id<MTLLibrary> library, NSMutableSet<NSString* >* originalOverrideNames, Device& device)
+ShaderModule::ShaderModule(std::variant<WGSL::SuccessfulCheck, WGSL::FailedCheck>&& checkResult, HashMap<String, Ref<PipelineLayout>>&& pipelineLayoutHints, HashMap<String, WGSL::Reflection::EntryPointInformation>&& entryPointInformation, id<MTLLibrary> library, NSMutableSet<NSString* >* originalOverrideNames, HashMap<String, String>&& originalFunctionNames, Device& device)
     : m_checkResult(convertCheckResult(WTFMove(checkResult)))
     , m_pipelineLayoutHints(WTFMove(pipelineLayoutHints))
     , m_entryPointInformation(WTFMove(entryPointInformation))
     , m_library(library)
     , m_device(device)
     , m_originalOverrideNames(originalOverrideNames)
+    , m_originalFunctionNames(WTFMove(originalFunctionNames))
 {
     bool allowVertexDefault = true, allowFragmentDefault = true, allowComputeDefault = true;
     if (std::holds_alternative<WGSL::SuccessfulCheck>(m_checkResult)) {
@@ -575,6 +600,12 @@ const ShaderModule::FragmentInputs* ShaderModule::fragmentInputsForEntryPoint(co
     if (auto it = m_fragmentInputsForEntryPoint.find(entryPoint); it != m_fragmentInputsForEntryPoint.end())
         return &it->value;
 
+    auto transformed = m_originalFunctionNames.find(entryPoint);
+    if (transformed == m_originalFunctionNames.end())
+        return nullptr;
+    if (auto it = m_fragmentInputsForEntryPoint.find(transformed->value); it != m_fragmentInputsForEntryPoint.end())
+        return &it->value;
+
     return nullptr;
 }
 
@@ -583,12 +614,24 @@ const ShaderModule::FragmentOutputs* ShaderModule::fragmentReturnTypeForEntryPoi
     if (auto it = m_fragmentReturnTypeForEntryPoint.find(entryPoint); it != m_fragmentReturnTypeForEntryPoint.end())
         return &it->value;
 
+    auto transformed = m_originalFunctionNames.find(entryPoint);
+    if (transformed == m_originalFunctionNames.end())
+        return nullptr;
+    if (auto it = m_fragmentReturnTypeForEntryPoint.find(transformed->value); it != m_fragmentReturnTypeForEntryPoint.end())
+        return &it->value;
+
     return nullptr;
 }
 
 const ShaderModule::VertexOutputs* ShaderModule::vertexReturnTypeForEntryPoint(const String& entryPoint) const
 {
     if (auto it = m_vertexReturnTypeForEntryPoint.find(entryPoint); it != m_vertexReturnTypeForEntryPoint.end())
+        return &it->value;
+
+    auto transformed = m_originalFunctionNames.find(entryPoint);
+    if (transformed == m_originalFunctionNames.end())
+        return nullptr;
+    if (auto it = m_vertexReturnTypeForEntryPoint.find(transformed->value); it != m_vertexReturnTypeForEntryPoint.end())
         return &it->value;
 
     return nullptr;
@@ -602,6 +645,12 @@ bool ShaderModule::hasOverride(const String& name) const
 const ShaderModule::VertexStageIn* ShaderModule::stageInTypesForEntryPoint(const String& entryPoint) const
 {
     if (auto it = m_stageInTypesForEntryPoint.find(entryPoint); it != m_stageInTypesForEntryPoint.end())
+        return &it->value;
+
+    auto transformed = m_originalFunctionNames.find(entryPoint);
+    if (transformed == m_originalFunctionNames.end())
+        return nullptr;
+    if (auto it = m_stageInTypesForEntryPoint.find(transformed->value); it != m_stageInTypesForEntryPoint.end())
         return &it->value;
 
     return nullptr;
@@ -927,9 +976,16 @@ const PipelineLayout* ShaderModule::pipelineLayoutHint(const String& name) const
 const WGSL::Reflection::EntryPointInformation* ShaderModule::entryPointInformation(const String& name) const
 {
     auto iterator = m_entryPointInformation.find(name);
-    if (iterator == m_entryPointInformation.end())
+    if (iterator != m_entryPointInformation.end())
+        return &iterator->value;
+
+    auto transformed = m_originalFunctionNames.find(name);
+    if (transformed == m_originalFunctionNames.end())
         return nullptr;
-    return &iterator->value;
+    if (auto it = m_entryPointInformation.find(transformed->value); it != m_entryPointInformation.end())
+        return &it->value;
+
+    return nullptr;
 }
 
 const String& ShaderModule::defaultVertexEntryPoint() const
@@ -945,6 +1001,18 @@ const String& ShaderModule::defaultFragmentEntryPoint() const
 const String& ShaderModule::defaultComputeEntryPoint() const
 {
     return m_defaultComputeEntryPoint;
+}
+
+const String& ShaderModule::transformedEntryPoint(const String& entryPoint) const
+{
+    if (!entryPoint.length())
+        return entryPoint;
+
+    auto transformed = m_originalFunctionNames.find(entryPoint);
+    if (transformed != m_originalFunctionNames.end())
+        return transformed->value;
+
+    return entryPoint;
 }
 
 } // namespace WebGPU
