Source/WebKit/Shared/WebGPU/WebGPUProgrammableStage.h
@@ -39,7 +39,7 @@ using PipelineConstantValue = double; // May represent WGSL’s bool, f32, i32, 
 
 struct ProgrammableStage {
     WebGPUIdentifier module;
-    String entryPoint;
+    std::optional<String> entryPoint;
     Vector<KeyValuePair<String, PipelineConstantValue>> constants;
 };
 
